@@ -1,5 +1,8 @@
 2006-05-22  Christian Stimming  <stimming@tuhh.de>
 
+	* src/gnome/gnc-plugin-basic-commands.c: Deactivate the "Close
+	Books" menu item because that feature is unfinished as well.
+
 	* src/gnome/gnc-plugin-basic-commands.c: Hide the "Export account
 	chart as QSF" as well. Not ready for 2.0.0 due to e.g. bug#341559.
 
